--- a/jedis/pom.xml
+++ b/jedis/pom.xml
@@ -8,31 +8,31 @@
         <version>2.4.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.tr</groupId>
-    <artifactId>business</artifactId>
+    <groupId>com.tr.frame</groupId>
+    <artifactId>jedis</artifactId>
     <version>1.0.0</version>
-    <name>business</name>
-    <description>business</description>
+    <name>jedis</name>
+    <description>jedis</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>com.tr.frame</groupId>
-            <artifactId>auth</artifactId>
+            <artifactId>common</artifactId>
             <version>1.0.0</version>
         </dependency>
 
         <dependency>
-            <groupId>com.tr.frame</groupId>
-            <artifactId>mqtt</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.tr.frame</groupId>
+            <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>1.0.0</version>
+            <version>2.9.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
