--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>auth</module>
         <module>business</module>
         <module>common</module>
+        <module>druid</module>
         <module>jedis</module>
         <module>mqtt</module>
     </modules>
