--- a/mqtt/pom.xml
+++ b/mqtt/pom.xml
@@ -39,13 +39,14 @@
         <!-- MQTT end -->
     </dependencies>
 
-    <build>
+    <!-- 除了主启动项目都不能有 spring-boot-maven-plugin -->
+    <!--<build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
-    </build>
+    </build>-->
 
 </project>
